public class AuthController {

	private FlaskApp app;

	public void login() {
		// TODO - implement AuthController.login
		throw new UnsupportedOperationException();
	}

	public void register_user() {
		// TODO - implement AuthController.register_user
		throw new UnsupportedOperationException();
	}

	public void logout() {
		// TODO - implement AuthController.logout
		throw new UnsupportedOperationException();
	}

	public void refreshUser() {
		// TODO - implement AuthController.refreshUser
		throw new UnsupportedOperationException();
	}

}