public class CustomerController {

	private FlaskApp app;
	private FrontendController frontend;

	public void loadCustomers() {
		// TODO - implement CustomerController.loadCustomers
		throw new UnsupportedOperationException();
	}

	public void saveCustomer() {
		// TODO - implement CustomerController.saveCustomer
		throw new UnsupportedOperationException();
	}

	public void updateCustomer() {
		// TODO - implement CustomerController.updateCustomer
		throw new UnsupportedOperationException();
	}

	public void deleteCustomer() {
		// TODO - implement CustomerController.deleteCustomer
		throw new UnsupportedOperationException();
	}

}