public class CustomerDAO {

	/**
	 * 
	 * @param connection
	 */
	public Customer[] get_all_customers(SQLConnection connection) {
		// TODO - implement CustomerDAO.get_all_customers
		throw new UnsupportedOperationException();
	}

	/**
	 * 
	 * @param connection
	 * @param customer
	 */
	public int insert_new_customer(SQLConnection connection, Customer customer) {
		// TODO - implement CustomerDAO.insert_new_customer
		throw new UnsupportedOperationException();
	}

	/**
	 * 
	 * @param connection
	 * @param customer
	 */
	public int update_customer(SQLConnection connection, Customer customer) {
		// TODO - implement CustomerDAO.update_customer
		throw new UnsupportedOperationException();
	}

	/**
	 * 
	 * @param connection
	 * @param customer_id
	 */
	public int delete_customer(SQLConnection connection, int customer_id) {
		// TODO - implement CustomerDAO.delete_customer
		throw new UnsupportedOperationException();
	}

}