public class FinanceController {

	private FlaskApp app;
	private FrontendController frontend;

	public void loadFinances() {
		// TODO - implement FinanceController.loadFinances
		throw new UnsupportedOperationException();
	}

	public void saveFinance() {
		// TODO - implement FinanceController.saveFinance
		throw new UnsupportedOperationException();
	}

	public void updateFinance() {
		// TODO - implement FinanceController.updateFinance
		throw new UnsupportedOperationException();
	}

	public void deleteFinance() {
		// TODO - implement FinanceController.deleteFinance
		throw new UnsupportedOperationException();
	}

}