public class FinanceDAO {

	/**
	 * 
	 * @param connection
	 */
	public Finance[] get_all_finances(SQLConnection connection) {
		// TODO - implement FinanceDAO.get_all_finances
		throw new UnsupportedOperationException();
	}

	/**
	 * 
	 * @param connection
	 * @param finance
	 */
	public int insert_new_finance(SQLConnection connection, Finance finance) {
		// TODO - implement FinanceDAO.insert_new_finance
		throw new UnsupportedOperationException();
	}

	/**
	 * 
	 * @param connection
	 * @param finance
	 */
	public int update_finance(SQLConnection connection, Finance finance) {
		// TODO - implement FinanceDAO.update_finance
		throw new UnsupportedOperationException();
	}

	/**
	 * 
	 * @param connection
	 * @param payment_id
	 */
	public int delete_finance(SQLConnection connection, int payment_id) {
		// TODO - implement FinanceDAO.delete_finance
		throw new UnsupportedOperationException();
	}

}