public class FlaskApp {

	private SQLConnection sql_conn;
	private UOMDAO uom_dao;
	private ProductDAO product_dao;
	private CustomerDAO customer_dao;
	private OrderDAO order_dao;
	private FinanceDAO finance_dao;
	private UserDAO user_dao;

	public SQLConnection db_connection() {
		// TODO - implement FlaskApp.db_connection
		throw new UnsupportedOperationException();
	}

	public void get_uom() {
		// TODO - implement FlaskApp.get_uom
		throw new UnsupportedOperationException();
	}

	public void get_products() {
		// TODO - implement FlaskApp.get_products
		throw new UnsupportedOperationException();
	}

	public void insert_product() {
		// TODO - implement FlaskApp.insert_product
		throw new UnsupportedOperationException();
	}

	public void delete_product() {
		// TODO - implement FlaskApp.delete_product
		throw new UnsupportedOperationException();
	}

	public void get_customers() {
		// TODO - implement FlaskApp.get_customers
		throw new UnsupportedOperationException();
	}

	public void insert_customer() {
		// TODO - implement FlaskApp.insert_customer
		throw new UnsupportedOperationException();
	}

	public void update_customer() {
		// TODO - implement FlaskApp.update_customer
		throw new UnsupportedOperationException();
	}

	public void delete_customer() {
		// TODO - implement FlaskApp.delete_customer
		throw new UnsupportedOperationException();
	}

	public void get_all_orders() {
		// TODO - implement FlaskApp.get_all_orders
		throw new UnsupportedOperationException();
	}

	public void insert_order() {
		// TODO - implement FlaskApp.insert_order
		throw new UnsupportedOperationException();
	}

	public void update_order() {
		// TODO - implement FlaskApp.update_order
		throw new UnsupportedOperationException();
	}

	public void delete_order() {
		// TODO - implement FlaskApp.delete_order
		throw new UnsupportedOperationException();
	}

	/**
	 * 
	 * @param order_id
	 */
	public void get_order_details(int order_id) {
		// TODO - implement FlaskApp.get_order_details
		throw new UnsupportedOperationException();
	}

	public void get_finances() {
		// TODO - implement FlaskApp.get_finances
		throw new UnsupportedOperationException();
	}

	public void insert_finance() {
		// TODO - implement FlaskApp.insert_finance
		throw new UnsupportedOperationException();
	}

	public void update_finance() {
		// TODO - implement FlaskApp.update_finance
		throw new UnsupportedOperationException();
	}

	public void delete_finance() {
		// TODO - implement FlaskApp.delete_finance
		throw new UnsupportedOperationException();
	}

	public void register_user() {
		// TODO - implement FlaskApp.register_user
		throw new UnsupportedOperationException();
	}

	public void login() {
		// TODO - implement FlaskApp.login
		throw new UnsupportedOperationException();
	}

	public void logout() {
		// TODO - implement FlaskApp.logout
		throw new UnsupportedOperationException();
	}

	public void current_user() {
		// TODO - implement FlaskApp.current_user
		throw new UnsupportedOperationException();
	}

}