public class FrontendController {

	/**
	 * 
	 * @param method
	 * @param url
	 */
	public void callApi(string method, string url) {
		// TODO - implement FrontendController.callApi
		throw new UnsupportedOperationException();
	}

	public void calculateValue() {
		// TODO - implement FrontendController.calculateValue
		throw new UnsupportedOperationException();
	}

}