public class OrderController {

	private FlaskApp app;
	private FrontendController frontend;

	public void loadOrders() {
		// TODO - implement OrderController.loadOrders
		throw new UnsupportedOperationException();
	}

	public void createOrder() {
		// TODO - implement OrderController.createOrder
		throw new UnsupportedOperationException();
	}

	public void updateOrder() {
		// TODO - implement OrderController.updateOrder
		throw new UnsupportedOperationException();
	}

	public void deleteOrder() {
		// TODO - implement OrderController.deleteOrder
		throw new UnsupportedOperationException();
	}

	public void viewOrderDetails() {
		// TODO - implement OrderController.viewOrderDetails
		throw new UnsupportedOperationException();
	}

}