public class OrderDAO {

	/**
	 * 
	 * @param connection
	 * @param order
	 */
	public OrderResult insert_order(SQLConnection connection, Order order) {
		// TODO - implement OrderDAO.insert_order
		throw new UnsupportedOperationException();
	}

	/**
	 * 
	 * @param connection
	 */
	public Order[] get_all_orders(SQLConnection connection) {
		// TODO - implement OrderDAO.get_all_orders
		throw new UnsupportedOperationException();
	}

	/**
	 * 
	 * @param connection
	 * @param order_id
	 */
	public Order get_order_by_id(SQLConnection connection, int order_id) {
		// TODO - implement OrderDAO.get_order_by_id
		throw new UnsupportedOperationException();
	}

	/**
	 * 
	 * @param connection
	 * @param order_id
	 */
	public OrderDetail[] get_order_details(SQLConnection connection, int order_id) {
		// TODO - implement OrderDAO.get_order_details
		throw new UnsupportedOperationException();
	}

	/**
	 * 
	 * @param connection
	 * @param order
	 */
	public OrderResult update_order(SQLConnection connection, Order order) {
		// TODO - implement OrderDAO.update_order
		throw new UnsupportedOperationException();
	}

	/**
	 * 
	 * @param connection
	 * @param order_id
	 */
	public int delete_order(SQLConnection connection, int order_id) {
		// TODO - implement OrderDAO.delete_order
		throw new UnsupportedOperationException();
	}


	public class OrderResult {
	}

}