public class ProductController {

	private FlaskApp app;
	private FrontendController frontend;

	public void loadProducts() {
		// TODO - implement ProductController.loadProducts
		throw new UnsupportedOperationException();
	}

	public void saveProduct() {
		// TODO - implement ProductController.saveProduct
		throw new UnsupportedOperationException();
	}

	public void deleteProduct() {
		// TODO - implement ProductController.deleteProduct
		throw new UnsupportedOperationException();
	}

}