public class ProductDAO {

	/**
	 * 
	 * @param connection
	 */
	public Product[] get_all_products(SQLConnection connection) {
		// TODO - implement ProductDAO.get_all_products
		throw new UnsupportedOperationException();
	}

	/**
	 * 
	 * @param connection
	 * @param product
	 */
	public int insert_new_product(SQLConnection connection, Product product) {
		// TODO - implement ProductDAO.insert_new_product
		throw new UnsupportedOperationException();
	}

	/**
	 * 
	 * @param connection
	 * @param product_id
	 */
	public int delete_product(SQLConnection connection, int product_id) {
		// TODO - implement ProductDAO.delete_product
		throw new UnsupportedOperationException();
	}

}