public class SQLConnection {

	public static SQLConnection get_sql_connection() {
		// TODO - implement SQLConnection.get_sql_connection
		throw new UnsupportedOperationException();
	}

}