public class UOMDAO {

	/**
	 * 
	 * @param connection
	 */
	public UOM[] get_uoms(SQLConnection connection) {
		// TODO - implement UOMDAO.get_uoms
		throw new UnsupportedOperationException();
	}

}